--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@
           2025, pukul 09.00 WIB
         </p>
         <p>
-          <span class="icon">📍</span><strong>Tempat:</strong> Masjid Al-Ikhlas,
-          Jakarta
+          <span class="icon">📍</span><strong>Tempat:</strong> Aula SMK INFOKOM
         </p>
       </div>
 
