--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@
           Lebih Baik
         </p>
         <p>
-          <span class="icon">🎤</span><strong>Pemateri:</strong> Ustadz Ahmad
-          Faiz
+          <span class="icon">🎤</span><strong>Pemateri:</strong> Ustadz M Aulia Anggara
         </p>
         <p>
           <span class="icon">⏰</span><strong>Waktu:</strong> Sabtu, 10 Februari
